tests/error/tracing_errors/input_mutate3@python313.err
Traceback (most recent call last):
  File "$FILE", line 25, in <module>
    module.compile()
    ~~~~~~~~~~~~~~^^
  File "$FILE", line 14, in foo
    s.x = 1
    ^^^
TypeError: Object of type `S` is immutable
